src/Board/Board.css
#board {
    --primary: brown;
    --secondary: #ffd8a0;
    --primary-hover: #2727ff;
    --secondary-hover: rgb(128, 128, 211);
    --valid: greenyellow;
    --highlight: red;
    user-select: none;
    display: grid;
    grid-template-columns: repeat(15, 1fr);
    grid-template-rows: repeat(2, 50%);
    height: 100%;
    width: 100%;
    touch-action: none;
    border: 5vmin solid #aaa;
    transition: border-color 1s;
    box-sizing: border-box;
    .selected {
        --primary: var(--highlight);
        --secondary: var(--highlight);
    }
    > * {
        height: 100%;
        width: 100%;
        align-items: center;
        display: flex;
    }
    &.black {
        border-color: #777;
    }
    &.white {
        border-color: #ddd;
    }
}

.toolbar {
    order: 1;
}

.bar {
    background: var(--background-color-secondary);
    justify-content: center;
    flex-direction: column;
}

.home {
    background: var(--background-color-secondary);
    flex-direction: column;
    .piece {
        min-width: 0;
        min-height: 0;
    }
    &.valid {
        --primary: var(--valid);
        --secondary: var(--valid);
    }
}

.point {
    --point-piece-size: calc(100%/5.5);
    --point-size: 43vmin;
    --point-primary: solid var(--point-size) var(--primary);
    --point-secondary: solid var(--point-size) var(--secondary);
    position: relative;

    &::before {
        content: ' ';
        display: block;
        width: 0;
        height: 0;
        position: absolute;
        z-index: -1;
        transition: border-width 1s ease-in-out;

        @starting-style {
            border-width: 0;
        }
    }

    &.valid {
        --primary: var(--valid);
        --secondary: var(--valid);
    }
    
    &.dragOver {
        --primary: var(--highlight);
        --secondary: var(--highlight);
    }
}

/*
order:
[toolbar1] [leftboard2] [bar3] [rightboard4] [home5]
[dice6] [leftboard7] [bar8] [rightboard9] [home10]
*/

:nth-child(1 of .bar) {
    order: 3;
}
:nth-child(2 of .bar) {
    order: 8;
}
:nth-child(1 of .home) {
    order: 5;
}
:nth-child(2 of .home) {
    order: 10;
    justify-content: flex-end;
}
:nth-child(-n+12 of .point) {
    order: 4;
}
:nth-child(-n+6 of .point) {
    order: 2;
}
:nth-child(n+13 of .point) {
    order: 6;
}
:nth-child(n+19 of .point) {
    order: 8;
}

@media (orientation: landscape) {/* landscape layout (tablet / computer) */
    .home {
        height: 50%;
    }
    .piece {
        height: var(--point-piece-size);
    }
    .point {
        &:hover::before {
            /* border-top-color: var(--primary-hover) !important; */
        }
        &::before {
            left: 50%;
            transform: translateX(-50%);
            border-left: 3vmax solid transparent;
            border-right: 3vmax solid transparent;
            transition: border-top-width 1s ease-in-out, border-bottom-width 1s ease-in-out;
        }
        :nth-child(-n+12 of &) {/* top */
            flex-direction: column;
            &::before {
                border-top: var(--point-secondary);
            }
    
            &:nth-child(odd)::before {
                border-top-color: var(--primary);
            }
            /* Stack Pieces */
            .piece:nth-child(n+6) {
                transform: translateY(-450%);
            }
            .piece:nth-child(n+10) {
                transform: translateY(-800%);
            }
            .piece:nth-child(n+13) {
                transform: translateY(-1050%);
            }
            .piece:nth-child(n+15) {
                transform: translateY(-1200%);
            }
        }
    
        :nth-child(n+13 of &) {/* bottom */
            flex-direction: column-reverse;
            &::before {
                border-bottom: var(--point-secondary);
                bottom: 0;
                top: auto;
            }
            &:nth-child(even)::before {
                border-bottom-color: var(--primary);
            }
    
            &:nth-child(even):hover::before {
                /* border-bottom-color: var(--primary-hover) !important; */
            }
            &:nth-child(odd):hover::before {
                /* border-bottom-color: var(--secondary-hover) !important; */
            }
            /* Stack Pieces */
            .piece:nth-child(n+6) {
                transform: translateY(450%);
            }
    
            .piece:nth-child(n+10) {
                transform: translateY(800%);
            }
    
            .piece:nth-child(n+13) {
                transform: translateY(1050%);
            }
    
            .piece:nth-child(n+15) {
                transform: translateY(1200%);
            }
        }
    }
}
   
@media (orientation: portrait) {/* Portrait layout (mobile phone) */
    #board {
        writing-mode: tb;
    }
    #toolbar {
        order: 6;
    }
    .dice {
        order: 1;
    }
    .home {
        width: 50%;
    }
    .piece {
        width: var(--point-piece-size);
    }
    .point {
        &:nth-child(even):hover::before {
            /* border-right-color: var(--primary-hover) !important; */
        }
        &:nth-child(odd):hover::before {
            /* border-right-color: var(--secondary-hover) !important; */
        }

        &::before {
            top: 50%;
            transform: translateY(-50%);
            border-top: 3vmax solid transparent;
            border-bottom: 3vmax solid transparent;
            transition: border-left-width 1s ease-in-out, border-right-width 1s ease-in-out;
        }
        :nth-child(-n+12 of &) {/* top */
            flex-direction: column;
            
            &::before {
                border-right: var(--point-primary);
                right: 0;
            }
    
            &:nth-child(odd)::before {
                border-right-color: var(--secondary);
            }
            /* Stack Pieces */
            .piece:nth-child(n+6) {
                transform: translateX(450%);
            }
            .piece:nth-child(n+10) {
                transform: translateX(800%);
            }
            .piece:nth-child(n+13) {
                transform: translateX(1050%);
            }
            .piece:nth-child(n+15) {
                transform: translateX(1200%);
            }
        }
        
        :nth-child(n+13 of &) {/* bottom */
            flex-direction: column-reverse;
            &::before {
                border-left: var(--point-primary);
                left: 0;
            }
            &:hover::before {
                /* border-left-color: var(--primary-hover) !important; */
            }
            &:nth-child(even)::before {
                border-left-color: var(--secondary);
            }
            /* Stack Pieces */
            .piece:nth-child(n+6) {
                transform: translateX(-450%);
            }
            .piece:nth-child(n+10) {
                transform: translateX(-800%);
            }
            .piece:nth-child(n+13) {
                transform: translateX(-1050%);
            }
            .piece:nth-child(n+15) {
                transform: translateX(-1200%);
            }
        }
    }
}

